# modern-cpp-cmake-example

./: .clang-format  CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: main.cpp
src/models/: CMakeLists.txt
src/models/src/: employee.cpp
test/: CMakeLists.txt  employee_unittest.cpp
